--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@prisma/client": "^5.11.0",
+    "framer-motion": "^11.0.24",
     "next": "14.1.4",
     "prisma": "^5.11.0",
     "react": "^18",
